# PIBIC-2024-2025

./: README.md  README.md.txt
CoppeliaSim/: CMakeLists.txt
octave/: EKF.m  camera_muita_tag.m  exp1_armazen.txt  modelo_variancia.m  odo_cam_armazen_6.txt  odometria.m  plot_desvio_resultados.m
